# temporal-plant-tracker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  worker.py
backend/activities/: home_assistant.py  llm.py  openplantbook.py
backend/api/: main.py
backend/models/: config.py  plant.py
backend/scripts/: test_llm_activity.py
backend/tests/: conftest.py  test_sensors.py
backend/workflows/: plant_workflow.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddPlantModal.tsx  AssociateSensorModal.tsx  CareRangesEditor.tsx  PlantCard.tsx
frontend/src/types/: index.ts
